feat: Authentication Completed and Payment Functionality

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-VITE_API_URL="https://cloud.appwrite.io/vi"
+VITE_API_URL="https://cloud.appwrite.io/v1"
 VITE_PROJECT_ID="67445056003b68181232"
 VITE_DATABASE_ID="67447ba30009b6a70bb4"
+VITE_EMAIL="ayobamiakinola84@gmail.com"
+VITE_PAYSTACK_KEY="pk_test_db4877659c2b47566ec99941d312857a34ac782a"
