--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paystack/inline-js": "^2.22.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -26,6 +27,7 @@
     "react-hot-toast": "^2.4.1",
     "react-lazy-load-image-component": "^1.6.2",
     "react-lazyload": "^3.2.1",
+    "react-paystack": "^6.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-spinners": "^0.14.1",
